Wed Aug 06 11:14:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
	- continue merge from Steve patch:
	 - merged SQLGetDescRec and SQLSetDescRec

Wed Aug 06 09:53:15 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: fixed typo

Tue Aug  5 23:41:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* TODO added NTLMv2 note
	* doc/tds.html completed one little TODO
	* doc/userguide.sgml domain login discussion and tsql update
	* src/ctlib/ct.c reformatting in ct_options
	
Tue Aug 05 15:27:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: some updates

Tue Aug 05 14:22:56 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/print.c:
	- add a test for raiseerror

Tue Aug 05 10:57:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	- applied Peter Daecon patch (present also in Steve Murphree one)

Tue Aug  5 01:00:29 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am removed faq and basic question
	
Mon Aug  4 23:58:42 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* TODO added EILSEQ issue
	* include/tds.h started redefinition of log levels. 
	
Mon Aug  4 21:57:50 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/index.html doc/htdoc/software.html
	- updated per Frediano's suggestions today on ML
	
Mon Aug  4 21:22:21 EDT 2003    JK Lowden <jklowden@schemamania.org>
	* TODO marked website tasks as done.
	* doc/htdoc/faq.html 
	- linked to which_api and removed stale questions.

Mon Aug 04 17:12:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merge from Steve patch:
	 - merged _SQLAllocDesc and _SQLFreeDesc

Mon Aug 04 14:44:02 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/token.c:
	- fix problem when server change charset coding
