@@ -1,3 +1,10 @@
+Wed Aug 06 14:33:30 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/connectparams.c src/odbc/connectparams.h:
+	* src/odbc/odbc.c:
+	- continue merge from Steve patch:
+	 - merged SQLDriverConnect check and fix
+	- tdoParseConnectString handle unterminated string
+
 Wed Aug 06 11:14:04 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c vms/odbc_driver_axp.opt win32/FreeTDS.def:
 	- continue merge from Steve patch:
